feat: добавлены сущности User и Item с методами, позволяющими взаимодействовать с ними