@@ -5,11 +5,9 @@ import ru.practicum.shareit.exeptions.NotFoundException;
 import ru.practicum.shareit.item.model.Item;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
 
 @Repository
 public class ItemRepositoryImpl implements ItemRepository {
@@ -21,7 +19,7 @@ public class ItemRepositoryImpl implements ItemRepository {
     public List<Item> getByOwnerId(Long userId) {
         return items.stream()
                 .filter(item -> item.getOwnerId().equals(userId))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -33,30 +31,20 @@ public class ItemRepositoryImpl implements ItemRepository {
 
     @Override
     public List<Item> searchItemByName(String text) {
-        if (text == null || text.trim().isEmpty()) {
-            return Collections.emptyList();
-        }
         return items.stream()
                 .filter(item -> item.getName() != null &&
                         item.getName().toLowerCase().contains(text.toLowerCase()))
-                .filter(item -> item.getAvailable())
+                .filter(Item::getAvailable)
                 .toList();
     }
 
     @Override
     public Item create(Long userId, Item item) {
         Long id = idGenerator.getAndIncrement();
+        item.setId(id);
+        items.add(item);
 
-        Item createItem = new Item();
-        createItem.setId(id);
-        createItem.setName(item.getName());
-        createItem.setDescription(item.getDescription());
-        createItem.setOwnerId(userId);
-        createItem.setAvailable(item.getAvailable());
-
-        items.add(createItem);
-
-        return createItem;
+        return item;
     }
 
     @Override
@@ -67,12 +55,13 @@ public class ItemRepositoryImpl implements ItemRepository {
         item.setName(newItem.getName());
         item.setDescription(newItem.getDescription());
         item.setAvailable(newItem.getAvailable());
+        item.setOwnerId(newItem.getOwnerId());
 
         return item;
     }
 
     @Override
-    public void deleteItem(Long userId, Long itemId) {
+    public void delete(Long userId, Long itemId) {
         Optional<Item> optionalItem = getItemById(itemId);
 
         Item item = optionalItem.orElseThrow(() -> new NotFoundException("Такой предмет отсутствует в списке"));
